--- a/classes/Opportunities.cls
+++ b/classes/Opportunities.cls
@@ -1,22 +1,21 @@
 public with sharing class Opportunities extends fflib_SObjectDomain  implements I_CreateTask {
 
-    public Opportunities(List<Opportunity> opptRecords){
+    public Opportunities(List<Opportunity> opptRecords) {
 		super(opptRecords); // Provides records to fflib_SObjectDomain class constructor
 	}
 
 // This inner class is for safety reasons to ensure the right type passed  to the Opportunity class constructor
-	public class Constructor implements fflib_SObjectDomain.IConstructable{ 
-		public fflib_SObjectDomain construct(List<SObject> sObjectList){
+	public class Constructor implements fflib_SObjectDomain.IConstructable { 
+		public fflib_SObjectDomain construct(List<SObject> sObjectList) {
 			return new Opportunities(sObjectList); 
 		}
 	}
 
 
-	public fflib_ISObjectUnitOfWork createTasksForOpportunities(List<SObject> addTasksTo, fflib_ISObjectUnitOfWork unitOfWork)
-	{
+	public fflib_ISObjectUnitOfWork createTasksForOpportunities(List<SObject> addTasksTo, fflib_ISObjectUnitOfWork unitOfWork) {
 		List<Opportunity> oppts = (List<Opportunity>)addTasksTo;
 		List<Task> taskList = new List<Task>();
-		for(Opportunity o: oppts){
+		for(Opportunity o: oppts) {
 			Task t = new Task();
 			t.WhatID = o.Id;
 			t.Ownerid  = o.Ownerid;
@@ -29,6 +28,4 @@ public with sharing class Opportunities extends fflib_SObjectDomain  implements 
 		unitOfWork.registerNew(taskList);
 		return unitOfWork;
 	}
-
-
 }
